<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Leandro CV</string>

    <!-- Text -->
    <string name="term_Condition">Términos y condiciones</string>
    <string name="term_condition_description" tools:ignore="Typos">El presente Política de Privacidad establece los términos en que Leandro Castillo Borja usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo, esta Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.\n\n<b>Información que es recogida</b>\n\nNuestro sitio web podrá recoger información personal por ejemplo: Nombre,  información de contacto como  su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.\n\n<b>Uso de la información recogida</b>\n\nNuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos y servicios.  Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento.\n\nLeandro Castillo Borja está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado.\n\n<b>Enlaces a Terceros</b>\n\nEste sitio web pudiera contener en laces a otros sitios que pudieran ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos otros sitios terceros. Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está de acuerdo con estas.\n\n<b>Control de su información personal</b>\n\nEn cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada a nuestro sitio web.  Cada vez que se le solicite rellenar un formulario, como el de alta de usuario, puede marcar o desmarcar la opción de recibir información por correo electrónico.  En caso de que haya marcado la opción de recibir nuestro boletín o publicidad usted puede cancelarla en cualquier momento.\n\nEsta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento, salvo que sea requerido por un juez con un orden judicial.\n\nLeandro Castillo Borja Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier momento.</string>
    <string name="accept_terms_conditions">Acepto los términos y condiciones</string>
    <string name="see_cv">Ver cv</string>
    <string name="information">Información</string>
    <string name="article">Artículos</string>
    <string name="play_store">Play Store</string>
    <string name="name_vidal_resume">Leandro castillo borja</string>
    <string name="android_developer_vidal_resume">Android Developer</string>
    <string name="location_vidal_resume">Perú, Callao-Bellavista</string>
    <string name="description_vidal_resume">Con conocimientos de Android por 3 años usando java y kotlin control de firebase, manejo de git. Soy un chico que le gusta aprender todo lo referente al mundo móvil siempre actualizado para crear proyectos de calidad.
Actualmente realizo freelance con mi compañera que es diseñadora realizamos desarrollo Android de una manera rápida y eficiente.</string>
    <string name="tools">Herramientas:</string>
    <string name="training">Formación:</string>
    <string name="contact">Contactame si buscas realizar una App:</string>
    <string name="institute">Instituto: Cibertec – Computación e informática (egresado)</string>
    <string name="start_institute">Desde 2014 – Hasta 2017</string>
    <string name="job">Trabajo: Doapps (Develop Android)</string>
    <string name="start_job">Desde 2017 – Actualidad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>